# auto-mcp-server

./: README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: custom-tools.md
examples/: server.json
examples/tools/: weather.py
src/auto_mcp_server/: cli.py  config.py  loader.py  server.py  validator.py
